--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+table{
+  width: 100%;
+  border: 1px solid #067790;
+  border-collapse: collapse;
+  td{
+    padding: 8px;
+    border: 1px solid #067790;
+  }
+}
