added time entries view

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,11 @@
 <h1>Welcome to condor!</h1>
+
+<nav>
+  <ul>
+    <li><a routerLink="/">Projekte</a></li>
+    <li><a routerLink="users">User</a></li>
+    <li><a routerLink="time-entries">Timetracking</a></li>
+  </ul>
+</nav>
+
 <router-outlet></router-outlet>
